--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-aiogram==3.7.0
+aiogram==3.6.0
 aiofiles==23.2.1
-aiohttp==3.9.5
+aiohttp==3.9.3
+magic-filter==1.0.12
+pydantic==2.6.3
+typing-extensions==4.10.0
