--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,6 @@ services:
   - type: web
     name: telegrambot
     env: python
-    runtime: python
-    plan: free
-    pythonVersion: 3.11.8
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: python main.py
+    pythonVersion: 3.11.8
